--- a/photo-app/src/features/photo/component/photoCard/styles.scss
+++ b/photo-app/src/features/photo/component/photoCard/styles.scss
@@ -5,7 +5,8 @@
   overflow: hidden;
 
   & > img {
-    width: 100%;
+    width: 250px;
+    height: 250px;
     vertical-align: middle;
     transition: all 0.45s ease 0s;
   }
